--- a/6_publication/GreenFall/GreenFallCF.tex
+++ b/6_publication/GreenFall/GreenFallCF.tex
@@ -39,7 +39,7 @@ If there are huge contents associated with items, CBF will consume much more sys
 \item The first one combines CBF and CF, called \textit{combination approach}. In typical scenario, the technique has two stages. Firstly, it applies CBF into completing spare matrix and secondly, it applies CF into making prediction for recommendation. The technique improves accuracy of prediction but it consumes much more time and resources because the first stage plays the role of pre-processing step and there is requirement of both item content matrix and rating matrix.
 \item The second one compresses spare matrix into a \textit{representative model} which then is used to make recommendations. This is \textit{model-based approach} for CF. Note that CF has two common approaches such as memory-based and model-based. The model-based approach often applies statistical and machine learning methods into constructing representative model.
 \end{itemize}
-Although model-based approach does not give such a precise result as combination approach does, it can solve the problem of huge database and sparse matrix. Moreover it can respond user's request immediately by making prediction on representative model through instant inference mechanism. In general, there are four common approaches for model-based CF such as clustering model, latent model, Markov decision process model and matrix factorization model. Clustering CF \cite{ungar:clusteringcf} is based on the assumption that users in the same group have the same interest; so they rate items similarly. There are two clustering techniques: using clustering algorithms (\textit{k}-means, \textit{k}-centroids, etc.) and using Bayesian classifier. Authors \cite{miyahara:simplebayes} propose the Simple Bayesian Classifier for CF. Suppose rating values range in the integer interval \{1, 2, 3, 4, 5\}, there is a set of 5 respective classes \{$c_1$, $c_2$, $c_3$, $c_4$, $c_5$\}. The Simple Bayesian Classifier uses Naive Bayesian classification method \cite[p.~4]{miyahara:simplebayes} to determine which class a given user belongs to. Author \cite{langseth:bayescf} assumes that there is a linear mapping from the latent space of users and items to the numerical rating scale. Such mapping which conforms the full joint distribution over all ratings constructs a Bayesian network. Parameters of joint distribution are learned from training data, which are used for predicting active users' ratings. According to \cite{campos:hybridbayes}, the hybrid recommender model is the Bayesian network that includes three main kinds of nodes such as feature nodes, item nodes, and user nodes. Each feature node represents an attribute of item. Active users' ratings are dependent on these nodes.
+Although model-based approach does not give such a precise result as combination approach does, it can solve the problem of huge database and sparse matrix. Moreover it can respond user's request immediately by making prediction on representative model through instant inference mechanism. In general, there are four common approaches for model-based CF such as clustering model, latent model, Markov decision process model and matrix factorization model. Clustering CF \cite{ungar:clusteringcf} is based on the assumption that users in the same group have the same interest; so they rate items similarly. There are two clustering techniques: using clustering algorithms (\textit{k}-means, \textit{k}-centroids, etc.) and using Bayesian classifier. Authors \cite{miyahara:simplebayes} propose the Simple Bayesian Classifier for CF. Suppose rating values range in the integer interval \{1, 2, 3, 4, 5\}, there is a set of some classes. The Simple Bayesian Classifier uses Naive Bayesian classification method \cite[p.~4]{miyahara:simplebayes} to determine which class a given user belongs to. Author \cite{langseth:bayescf} assumes that there is a linear mapping from the latent space of users and items to the numerical rating scale. Such mapping which conforms the full joint distribution over all ratings constructs a Bayesian network. Parameters of joint distribution are learned from training data, which are used for predicting active users' ratings. According to \cite{campos:hybridbayes}, the hybrid recommender model is the Bayesian network that includes three main kinds of nodes such as feature nodes, item nodes, and user nodes. Each feature node represents an attribute of item. Active users' ratings are dependent on these nodes.
 
 Given a set of user $U$ = \{$u_1$, $u_2$,\ldots, $u_m$\} and a set of items $I$ = \{$i_1$, $i_2$,\ldots, $i_n$\}, observation ($u$, $i$) where $u \in U$ and $i \in I$ is considered as the co-occurrence of user and item. A latent class variable $c$ is associated with each co-occurrence ($u$, $i$). We have a set of latent class variables $C$ = \{$c_1$, $c_2$,\ldots, $c_k$\}. The mapping $c$: $U$ x $I$ $\rightarrow$ $C$ is called latent class model or aspect model \cite[pp.~91-92]{thomas:latentcf}. The problem which needs to be solved is how to specify the latent class model. Author \cite[p.~95]{thomas:latentcf} proposes Expectation Maximization (EM) algorithm to determine which latent variable $c \in C$ is the most suitable to be associated to ($u$, $i$).
 
@@ -237,7 +237,7 @@ In step 2, the first itemset $s_1$ is initialized as $Item\_2\_5$ that is the fi
 \begin{center}
 $s_1$ = (111) and $support$($s_1$) = $count$(111) = 3
 \end{center}
-Where $support$(\ldots) denotes the support of itemset and $count$(\ldots) indicates the number of bits whose values are 1 (s) in bit set (\ldots).
+Where $support$(\ldots) denotes the support of itemset and $count$(\ldots) indicates the number of bits whose values are 1 (s) in $bitset$(\ldots).
 
 In step 3 and 4, sub-items (clusters) such as $Item\_1\_3$, $Item\_3\_2$ and $Item\_4\_5$ are picked in turn and all of them satisfy minimum support.
 \begin{itemize}
