--- a/6_publication/GreenFall/GreenFallCF-2023.tex
+++ b/6_publication/GreenFall/GreenFallCF-2023.tex
@@ -21,13 +21,13 @@ Loc Nguyen \textsuperscript{1}, Phung T. M. Do \textsuperscript{2}\\
 \maketitle
 
 \begin{abstract}
-Collaborative filtering (CF) is a popular technique in recommendation study. Concretely, items which are recommended to user are determined by surveying her/his communities. There are two main CF approaches, which are memory-based and model-based. I propose a new CF model-based algorithm by mining frequent itemsets from rating database. Hence items which belong to frequent itemsets are recommended to user. My CF algorithm gives immediate response because the mining task is performed at offline process-mode. I also propose another so-called Roller algorithm for improving the process of mining frequent itemsets. Roller algorithm is implemented by heuristic assumption ``\textit{The larger the support of an item is, the higher it's likely that this item will occur in some frequent itemset}". It models upon doing white-wash task, which rolls a roller on a wall in such a way that is capable of picking frequent itemsets. Moreover I provide enhanced techniques such as bit representation, bit matching and bit mining in order to speed up recommendation process. These techniques take advantages of bitwise operations (\textit{AND}, \textit{NOT}) so as to reduce storage space and make algorithms run faster.In general, the key result of this research is to propose the Roller algorithm for recommendation task based on mining frequent bit itemsets.
+Collaborative filtering (CF) is a popular technique in recommendation study. Concretely, items which are recommended to user are determined by surveying her/his communities. There are two main CF approaches, which are memory-based and model-based. I propose a new CF model-based algorithm by mining frequent itemsets from rating database. Hence items which belong to frequent itemsets are recommended to user. My CF algorithm gives immediate response because the mining task is performed at offline process-mode. I also propose another so-called Roller algorithm for improving the process of mining frequent itemsets. Roller algorithm is implemented by heuristic assumption ``\textit{The larger the support of an item is, the higher it's likely that this item will occur in some frequent itemset}". It models upon doing white-wash task, which rolls a roller on a wall in such a way that is capable of picking frequent itemsets. Moreover I provide enhanced techniques such as bit representation, bit matching and bit mining in order to speed up recommendation process. These techniques take advantages of bitwise operations (\textit{AND}, \textit{NOT}) so as to reduce storage space and make algorithms run faster.
 
-\textit{Keywords}: recommendation system; collaborative filtering; rating matrix; mining frequent itemsets; bit matching; bit mining
+\textit{Keywords}: collaborative filtering; mining frequent itemsets; bit matching; bit mining
 \end{abstract}
 
 \section{Introduction}
-Recommendation system recommends users favorite items among a large number of existing items in database. Items refer to anything such as products, services, books, and newspapers. It is expected that users are most interested in recommended items. There are two common trends: content-based filtering (CBF) and collaborative filtering (CF) in building up a recommendations system as follows \cite[pp.~3-13]{su:survey} \cite[pp.~73-139]{ricci:recommender}:
+Recommendation system recommends users favorite items among a large number of existing items in database. Items refer to anything such as products, services, books, and newspapers. It is expected that users are most interested in recommended items. There are two common trends: content-base filtering (CBF) and collaborative filtering (CF) in building up a recommendations system as follows \cite[pp.~3-13]{su:survey} \cite[pp.~73-139]{ricci:recommender}:
 \begin{itemize}
 \item The CBF recommends an item to user if such item has similarities in contents to other items that he like most in the past (his rating for such item is high). Note that each item has contents which are its properties and so all items will compose a matrix, called \textit{item content matrix}.
 \item The CF, on the other hand, recommends an item to user if his neighbors which are other users similar to him are interested in such item. User's rating on any item expresses his interest on that item. All ratings on items will also compose a matrix, called \textit{rating matrix}.
@@ -39,7 +39,7 @@ If there are huge contents associated with items, CBF will consume much more sys
 \item The first one combines CBF and CF, called \textit{combination approach}. In typical scenario, the technique has two stages. Firstly, it applies CBF into completing spare matrix and secondly, it applies CF into making prediction for recommendation. The technique improves accuracy of prediction but it consumes much more time and resources because the first stage plays the role of pre-processing step and there is requirement of both item content matrix and rating matrix.
 \item The second one compresses spare matrix into a \textit{representative model} which then is used to make recommendations. This is \textit{model-based approach} for CF. Note that CF has two common approaches such as memory-based and model-based. The model-based approach often applies statistical and machine learning methods into constructing representative model.
 \end{itemize}
-Although model-based approach does not give such a precise result as combination approach does, it can solve the problem of huge database and sparse matrix. Moreover it can respond user's request immediately by making prediction on representative model through instant inference mechanism. In general, there are four common approaches for model-based CF such as clustering model, latent model, Markov decision process model and matrix factorization model. Clustering CF \cite{ungar:clusteringcf} is based on the assumption that users in the same group have the same interest; so they rate items similarly. There are two clustering techniques: using clustering algorithms (\textit{k}-means, \textit{k}-centroids, etc.) and using Bayesian classifier. Authors \cite{miyahara:simplebayes} propose the Simple Bayesian Classifier for CF. Suppose rating values range in the integer interval \{1, 2, 3, 4, 5\}, there is a set of some classes. The Simple Bayesian Classifier uses Naive Bayesian classification method \cite[p.~4]{miyahara:simplebayes} to determine which class a given user belongs to. Author \cite{langseth:bayescf} assumes that there is a linear mapping from the latent space of users and items to the numerical rating scale. Such mapping which conforms the full joint distribution overall ratings constructs a Bayesian network. Parameters of joint distribution are learned from training data, which are used for predicting active users' ratings. According to \cite{campos:hybridbayes}, the hybrid recommender model is the Bayesian network that includes three main kinds of nodes such as feature nodes, item nodes, and user nodes. Each feature node represents an attribute of item. Active users' ratings are dependent on these nodes.
+Although model-based approach does not give such a precise result as combination approach does, it can solve the problem of huge database and sparse matrix. Moreover it can respond user's request immediately by making prediction on representative model through instant inference mechanism. In general, there are four common approaches for model-based CF such as clustering model, latent model, Markov decision process model and matrix factorization model. Clustering CF \cite{ungar:clusteringcf} is based on the assumption that users in the same group have the same interest; so they rate items similarly. There are two clustering techniques: using clustering algorithms (\textit{k}-means, \textit{k}-centroids, etc.) and using Bayesian classifier. Authors \cite{miyahara:simplebayes} propose the Simple Bayesian Classifier for CF. Suppose rating values range in the integer interval \{1, 2, 3, 4, 5\}, there is a set of some classes. The Simple Bayesian Classifier uses Naive Bayesian classification method \cite[p.~4]{miyahara:simplebayes} to determine which class a given user belongs to. Author \cite{langseth:bayescf} assumes that there is a linear mapping from the latent space of users and items to the numerical rating scale. Such mapping which conforms the full joint distribution over all ratings constructs a Bayesian network. Parameters of joint distribution are learned from training data, which are used for predicting active users' ratings. According to \cite{campos:hybridbayes}, the hybrid recommender model is the Bayesian network that includes three main kinds of nodes such as feature nodes, item nodes, and user nodes. Each feature node represents an attribute of item. Active users' ratings are dependent on these nodes.
 
 Given a set of user $U$ = \{$u_1$, $u_2$,\ldots, $u_m$\} and a set of items $I$ = \{$i_1$, $i_2$,\ldots, $i_n$\}, observation ($u$, $i$) where $u \in U$ and $i \in I$ is considered as the co-occurrence of user and item. A latent class variable $c$ is associated with each co-occurrence ($u$, $i$). We have a set of latent class variables $C$ = \{$c_1$, $c_2$,\ldots, $c_k$\}. The mapping $c$: $U$ x $I$ $\rightarrow$ $C$ is called latent class model or aspect model \cite[pp.~91-92]{thomas:latentcf}. The problem which needs to be solved is how to specify the latent class model. Author \cite[p.~95]{thomas:latentcf} proposes Expectation Maximization (EM) algorithm to determine which latent variable $c \in C$ is the most suitable to be associated to ($u$, $i$).
 
@@ -51,7 +51,7 @@ Sparse rating matrix has insignificant rows or columns. Dimensionality reduction
 
 According to \cite[p.~1266]{shani:mdp}, recommendation can be considered as a sequential process including many stages. At each stage a list of items which is determined based on the last user's rating is recommended to user. So recommendation task is the best action that recommender system must do at concrete stage so as to satisfy user's interest. The recommendation becomes the process of making decision so as to choose the best action. Authors \cite[p.~1266]{shani:mdp} propose Markov decision process (MDP) to perform recommendation task. MDP is represented as four-tuple model \textless$S$, $A$, $R$, $T$\textgreater where $S$, $A$, $R$, and $T$ are a set of states, a set of actions, reward function, and transition probability density, respectively \cite[pp.~1270-1271]{shani:mdp}. The essence of making decision process is to find out the optimal policy with regard to such four-tuple model. Note that a policy is defined as the function that assigns an action to pre-assumption state.
 
-In this paper, I aim to propose a new approach for model-based CF in which users' purchase patterns are mined and modeled as frequent itemsets which, in turn, are used to make recommendations. It is the efficient approach because it takes advantage of data mining \cite[pp.~227-250]{han:datamining}, leading to get fastest speed and high quality of recommendation. Among many researches focusing on model-based CF, the method to mine association rules for CF, proposed by authors \cite{shyu:associationrules}, is nearest to the CF algorithm in this paper. The authors \cite{shyu:associationrules} apply shortest path algorithm of graph theory into finding distances between web pages with note that these distances are derived from use access sequences. Association rules are mined based on such distances, then applied into CF.
+In this paper, I aims to propose a new approach for model-based CF in which users' purchase patterns are mined and modeled as frequent itemsets which, in turn, are used to make recommendations. It is the efficient approach because it takes advantage of data mining \cite[pp.~227-250]{han:datamining}, leading to get fastest speed and high quality of recommendation. Among many researches focusing on model-based CF, the method to mine association rules for CF, proposed by authors \cite{shyu:associationrules}, is nearest to the CF algorithm in this paper. The authors \cite{shyu:associationrules} apply shortest path algorithm of graph theory into finding distances between web pages with note that these distances are derived from use access sequences. Association rules are mined based on such distances, then applied into CF.
 
 The core of the proposed CF is bit mining to discover frequent itemsets, mentioned in section~\ref{section:roller}. It is required to do a survey on bit mining. The terms ``\textit{bit}" and ``\textit{binary}" have the same meaning in this paper.
 Authors \cite{dong:bittablefi} propose so-called \textit{BitTableFI} algorithm. This algorithm uses data structure \textit{BitTable} to horizontally and vertically compress database for generating candidate itemsets and counting their supports in quick. Each row in BitTable, corresponding with a transaction in purchase database, is a string of bits and each bit (0 or 1) indicates whether or not an item is purchased.
@@ -70,7 +70,7 @@ Authors \cite{li:slidingwindow} propose so-called \textit{MFI-TransSW} algorithm
 
 Authors \cite{bashir:fast} build up lexicographic tree of items in transaction database. Itemset generation is done according to lexicographic order and bit-vector representation with attention that transaction database is transformed into bit table \cite[p.~8]{bashir:fast}. In a vertical bit-vector representation, if item $i$ is in transaction $j$, the bit $j$ of bit-vector $i$ is set to be 1. Moreover, the authors \cite[pp.~9-10]{bashir:fast} propose a so-called \textit{Projected-Bit-Regions} (PBR) to gain efficient projection of bit-vectors for calculating supports of itemsets. PBR and lexicographic tree are significant aspects of the research, which leads to achieve high speed in mining frequent itemsets.
 
-When compared with other researches on bit mining, the proposed heuristic mining algorithms is the simplest one in which there is no requirement of complex structure and complicated computation. In other words, its strong point is based on its simplicity, in which what we need to do includes rolling bit sets with bit operations. As a result, it gains high speed although it can lose some frequent itemsets. Note that bit mining serves CF application mentioned in section~\ref{section:newcf} and only optimal frequent itemset is used to generate recommendation list. So, it is not requisite for discovering all frequent itemsets in the most accurate way. Note, the possible research gap is the requirement of high speed in recommendation and thus, this research aims to fill in this research gap by mining frequent bit itemsets with simple algorithm.
+When compared with other researches on bit mining, the proposed heuristic mining algorithms is the simplest one in which there is no requirement of complex structure and complicated computation. In other words, its strong point is based on its simplicity, in which what we need to do includes rolling bit sets with bit operations. As a result, it gains high speed although it can lose some frequent itemsets. Note that bit mining serves CF application mentioned in section~\ref{section:newcf} and only optimal frequent itemset is used to generate recommendation list. So, it is not requisite for discovering all frequent itemsets in the most accurate way.
 
 This paper consists of five sections. In section~\ref{section:newcf}, I propose a new model-based CF algorithm based on mining frequent itemsets. The heuristic mining algorithm is discussed carefully in the section~\ref{section:roller}. Section~\ref{section:evaluation} is the evaluation. Section~\ref{section:conclusion} is the conclusion. Note that terms such as ``rating matrix", ``dataset" and ``database" have the same meaning in this paper.
 
@@ -250,7 +250,7 @@ Finally, the frequent itemset is $s_1$ = (110) which includes $Item\_2\_5$, $Ite
 \subsection{Improvement of Roller algorithm} \label{subsection:improvement.roller}
 Roller algorithm may lose some frequent itemsets in case that some frequent items don't have so high support (they are not excellent items) and they are in the last of descending ordering. So they don't have many chances to join frequent itemsets. However they really contribute themselves into some frequent itemset because they can combine together to build up a frequent itemset but they don't make the support of such itemset decreased much. It is difficult to discover their usefulness. In order to overcome this drawback, the Roller algorithm is modified so that such useful items are not ignored.
 
-So in step~3, instead of choosing the next item as the current item, we can look up an item whose support is \textit{pseudo-maximum} and choose such item as the current item. The concept of pseudo-maximum is defined that an item is not the last in descending ordering but it can combine with another item so as to gain maximum support. The Roller algorithm is improved by modifying steps 3 and 4 as follows:
+So in step~3, instead of choosing the next item as the current item, we can look up an item whose support is \textit{pseudo-maximum} and choose such item as the current item. The concept of pseudo-maximum is defined later. The Roller algorithm is improved by modifying steps 3 and 4 as follows:
 \begin{itemize}
 \item \textit{Step~1} is the same to that of normal Roller algorithm.
 \item \textit{Step~2} is the same to that of normal Roller algorithm.
